# CorrecionExamen

./: README.md  hello.py  prediccionElectoral.py  pyproject.toml  requirements.txt
